sort.basic.lessons.sort.basic.comb.AlgCombSort.scala.error
AlgCombSort:8: error: Double.type does not take parameters
			ecart=ecart/Double(1.3);
                                          ^AlgCombSort:11: error: type mismatch;
 found   : Double
 required: Int
		while (plusPetit(ecart+i,getNombreValeurs())) {
                                      ^AlgCombSort:12: error: type mismatch;
 found   : Double
 required: Int
			if (plusPetit(i+ecart,i)){
                                       ^AlgCombSort:13: error: type mismatch;
 found   : Double
 required: Int
				echange(i,i+ecart);
                                        ^